decoders/TAK/SDK/Header/tak_deco_lib.pas


function tak_SSD_Create_FromStream (      ASourceStream     : PtakStreamIoInterface;
                                          ASourceStreamUser : Pointer;
                                    const AOptions          : TtakSSDOptions;
                                          ADamageCallback   : TSSDDamageCallback;
                                          ACallbackUser     : Pointer) : TtakSeekableStreamDecoder;
                                    cdecl; external 'tak_deco_lib.dll';

procedure tak_SSD_Destroy (ADecoder : TtakSeekableStreamDecoder);
                           cdecl; external 'tak_deco_lib.dll';



{--- Info -----------------------------------------------------------}

function tak_SSD_Valid (ADecoder : TtakSeekableStreamDecoder) : TtakBool;
                        cdecl; external 'tak_deco_lib.dll';

function tak_SSD_State (ADecoder : TtakSeekableStreamDecoder) : TtakResult;
                        cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetStateInfo (    ADecoder : TtakSeekableStreamDecoder;
                               var AInfo    : TtakSSDResult) : TtakResult;
                               cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetErrorString (AError      : TtakResult;
                                 AString     : PChar;
                                 AStringSize : TtakInt32) : TtakResult;
                                 cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetStreamInfo (    ADecoder : TtakSeekableStreamDecoder;
                                var AInfo    : Ttak_str_StreamInfo) : TtakResult;
                                cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetFrameSize (ADecoder : TtakSeekableStreamDecoder) : TtakInt32;
                               cdecl; external 'tak_deco_lib.dll';



{--- IO -------------------------------------------------------------}

function tak_SSD_Seek (ADecoder   : TtakSeekableStreamDecoder;
                       ASamplePos : TtakInt64) : TtakResult;
                       cdecl; external 'tak_deco_lib.dll';

function tak_SSD_ReadAudio (    ADecoder   : TtakSeekableStreamDecoder;
                                ASamples   : Pointer;
                                ASampleNum : TtakInt32;
                            var AReadNum   : TtakInt32) : TtakResult;
                            cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetReadPos (ADecoder : TtakSeekableStreamDecoder) : TtakInt64;
                             cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetCurFrameBitRate (ADecoder : TtakSeekableStreamDecoder) : TtakInt32;
                                     cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetSimpleWaveDataDesc (    ADecoder : TtakSeekableStreamDecoder;
                                        var ADesc    : Ttak_str_SimpleWaveDataHeader) : TtakResult;
                                        cdecl; external 'tak_deco_lib.dll';

function tak_SSD_ReadSimpleWaveData (ADecoder : TtakSeekableStreamDecoder;
                                     ABuf     : Pointer;
                                     ABufSize : TtakInt32) : TtakResult;
                                     cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetEncoderInfo (    ADecoder : TtakSeekableStreamDecoder;
                                 var AInfo    : Ttak_str_MetaEncoderInfo) : TtakResult;
                                 cdecl; external 'tak_deco_lib.dll';

function tak_SSD_GetAPEv2Tag (ADecoder : TtakSeekableStreamDecoder) : TtakAPEv2Tag;
                              cdecl; external 'tak_deco_lib.dll';



implementation

end.
